--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-    <title>EduWell - Education HTML5 Template</title>
+    <title>Tech Point Official - Education HTML5 Template</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@ https://templatemo.com/tm-573-eduwell
                   <nav class="main-nav">
                       <!-- ***** Logo Start ***** -->
                       <a href="index.html" class="logo">
-                          <img src="assets/images/templatemo-eduwell.png" alt="EduWell Template">
+                          <img src="assets/images/logo-1.png" alt="tech-point-official">
                       </a>
                       <!-- ***** Logo End ***** -->
                       <!-- ***** Menu Start ***** -->
@@ -76,16 +76,16 @@ https://templatemo.com/tm-573-eduwell
       <div class="row">
         <div class="col-lg-6 align-self-center">
           <div class="header-text">
-            <h6>Welcome to our school</h6>
-            <h2>Best Place To Learn Graphic <em>Design!</em></h2>
+            <h6>Welcome to Tech Point Official</h6>
+            <h2>Best Custom PC / WorStation and Gaming PC Build @ <em>Tech Point Official!</em></h2>
             <div class="main-button-gradient">
-              <div class="scroll-to-section"><a href="#contact-section">Join Us Now!</a></div>
+              <div class="scroll-to-section"><a href="#contact-section">Contact Now !</a></div>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="right-image">
-            <img src="assets/images/banner-right-image.png" alt="">
+            <img src="assets/images/pc-1.gif" alt="">
           </div>
         </div>
       </div>
